[gd_scene load_steps=19 format=3 uid="uid://ctyl00ala60p1"]

[ext_resource type="Script" uid="uid://co0dp1v8pqngx" path="res://player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://ckgsh6hjyhptw" path="res://Assets/Adventurer/adventurer-Sheet.png" id="2_2hs0m"]
[ext_resource type="Script" uid="uid://d0kqih5awmjsi" path="res://state_machine.gd" id="2_i3pqv"]
[ext_resource type="Script" uid="uid://cspjtbh2w8cia" path="res://standing.gd" id="3_hqtel"]
[ext_resource type="Script" uid="uid://xkt4lqasmvcp" path="res://moving_on_ground.gd" id="4_sweqy"]
[ext_resource type="Script" uid="uid://dali6vr0cs76t" path="res://in_air.gd" id="5_sweqy"]
[ext_resource type="Script" uid="uid://srs7uogboow3" path="res://on_wall.gd" id="7_1jxqw"]
[ext_resource type="Script" uid="uid://bgsul3mya0sh8" path="res://make_wall.gd" id="8_dw050"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sh265"]
size = Vector2(13, 29)

[sub_resource type="Animation" id="Animation_n7ghd"]
resource_name = "Falling"
length = 0.333
loop_mode = 1
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_b26j0"]
resource_name = "Flip"
length = 0.667
loop_mode = 1
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_nvl01"]
resource_name = "JumpFromGround"
length = 0.667
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_1jxqw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(4, 1)]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "Running"
loop_mode = 1
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1)]
}

[sub_resource type="Animation" id="Animation_dw050"]
resource_name = "Standing"
length = 0.667
loop_mode = 1
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_ivps1"]
resource_name = "OnWall"
length = 0.5
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(6, 9), Vector2i(0, 10), Vector2i(1, 10)]
}

[sub_resource type="Animation" id="Animation_urp6f"]
resource_name = "MakeWall"
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 7), Vector2i(5, 7), Vector2i(6, 7), Vector2i(0, 8), Vector2i(1, 8), Vector2i(2, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b26j0"]
_data = {
&"Falling": SubResource("Animation_n7ghd"),
&"Flip": SubResource("Animation_b26j0"),
&"Jump": SubResource("Animation_nvl01"),
&"MakeWall": SubResource("Animation_urp6f"),
&"OnWall": SubResource("Animation_ivps1"),
&"RESET": SubResource("Animation_1jxqw"),
&"Running": SubResource("Animation_2hs0m"),
&"Standing": SubResource("Animation_dw050")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_4flbx")

[node name="WallPoint" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-24, -20)
texture = ExtResource("2_2hs0m")
centered = false
hframes = 7
vframes = 11
frame = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_sh265")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_i3pqv")
initial_state = NodePath("InAir")

[node name="Standing" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("3_hqtel")
player = NodePath("../..")

[node name="MovingOnGround" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_sweqy")
player = NodePath("../..")

[node name="InAir" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_sweqy")
player = NodePath("../..")

[node name="OnWall" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_1jxqw")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dpe18h5nh57fd"

[node name="MakeWall" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("8_dw050")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dpe18h5nh57fd"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b26j0")
}
autoplay = "Standing"

[connection signal="current_state_signal" from="StateMachine" to="." method="state_changed"]
[connection signal="spawn_platform" from="StateMachine/InAir" to="." method="_on_in_air_spawn_platform"]
[connection signal="Transitioned" from="StateMachine/OnWall" to="StateMachine/InAir" method="_on_on_wall_transitioned"]
[connection signal="make_wall" from="StateMachine/MakeWall" to="." method="_on_make_wall_make_wall"]
